--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,6 @@ theme: minimal
 # Automatically change light/dark mode based on user's preference?
 day_night: false
 # Your choice of font
-font: ''  # No value = inherit font from color theme pack (e.g. minimal)
+font: 'classic'  # No value = inherit font from color theme pack (e.g. minimal)
 # Your choice of font size
-font_size: S
+font_size: xs
