--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,1 @@
-
-
-# Your choice of color theme
-theme: minimal
-# Automatically change light/dark mode based on user's preference?
-day_night: false
-# Your choice of font
-font: 'classic'  # No value = inherit font from color theme pack (e.g. minimal)
-# Your choice of font size
-font_size: XS
+theme: jekyll-theme-minimal
